# code-knowledge-mcptool

./: .clinerules  .gitignore  .gitmodules  README.md  clinerules_template.md  mcp_config_example.json  migration-plan.md  pyproject.toml  pytest.ini
docs/: mcp_server_guide.md  memory_bank_instructions.md  requirements.md
memory-bank/: activeContext.md  creating-an-mcp-server.md  mcp-python-sdk.md  modelcontextprotocol-python-sdk.txt  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  uv-and-environments.txt
src/: index_repository.py  query_commons_lang.py  query_index.py
src/code_chat_tool/: __init__.py  code_parser.py  embedding.py  mcp_tool.py  vector_store.py
src/code_knowledge_store/: embedding.py  server.py  vector_store.py
src/code_knowledge_store/tests/: fixtures.py
src/code_knowledge_store/tests/integration/: test_mcp_contract.py
src/code_knowledge_tool/: __init__.py  code_parser.py  embedding.py  mcp_tool.py  tool_handlers.py
tests/: __init__.py  fixtures.py
tests/integration/: __init__.py  response_evaluator.py  test_code_chat.py  test_knowledge_tool.py  test_mcp_contract.py  test_package_build.py
