[build-system]
requires = ["hatchling", "setuptools>=61.0"]
build-backend = "hatchling.build"

[project]
name = "code-knowledge-tool"
version = "0.1.0"
description = "Knowledge management tool for code repositories using vector embeddings"
requires-python = ">=3.8,<3.14"
dependencies = [
    "chromadb",
    "httpx",
    "pydantic",
    "typing-extensions",
    "sentence-transformers>=2.0.0",
    "transformers==4.41.0",
    "tokenizers>=0.10.3",
    "numpy<2.0.0"  # Downgrade to ensure compatibility with existing modules
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "ruff"
]
torch = [
    "torch>=1.11.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_knowledge_tool"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']
