[build-system]
requires = ["hatchling", "setuptools>=61.0"]
build-backend = "hatchling.build"

[project]
name = "code-knowledge-tool"
version = "0.1.0"
description = "Knowledge management tool for code repositories using vector embeddings"
requires-python = ">=3.8,<3.12"  # PyTorch currently supports up to Python 3.11
dependencies = [
    "chromadb",
    "httpx",
    "pydantic>=2.0.0",
    "typing-extensions",
    "numpy<2.0.0",  # Downgrade to ensure compatibility with existing modules
    "modelcontextprotocol>=0.1.0"  # MCP SDK
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
    "pytest-asyncio"  # For async test support
],
ollama = [
    "httpx>=0.24.0"  # For Ollama API support
]

[tool.hatch.build.targets.wheel]
packages = ["src/code_knowledge_tool"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']
