[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-knowledge-store"
version = "0.1.0"
description = "Knowledge management tool for code repositories using vector embeddings"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "chromadb",
    "httpx",
    "numpy<2.0.0",  # Ensure compatibility
    "pydantic>=2.0.0",
    "pytest-asyncio"  # Required for async tests
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
    "ruff",
    "pytest-asyncio"  # For async test support
    "pytest-cov"
]
ollama = [
    "httpx>=0.24.0"  # For Ollama API support
]

[project.scripts]
code-knowledge-store = "code_knowledge_store:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_knowledge_store"]
